提交人：wj 提交内容： 1.优化代码 2.删除无用代码