@@ -4,7 +4,6 @@ import com.wj.demo.framework.common.model.Node;
 
 import java.lang.reflect.Field;
 import java.util.ArrayList;
-import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
@@ -19,11 +18,9 @@ public class NodeUtils {
     /**
      * 排列成树状
      *
-     * @param paramList
+     * @param paramList       数据
      * @param fieldName       Id
      * @param parentFieldName parentId
-     * @param <T>
-     * @return
      */
     public static <T> List<Node<T>> tree(List<T> paramList, String fieldName, String parentFieldName) {
         //最高级节点
@@ -33,7 +30,7 @@ public class NodeUtils {
         }
 
         //获取所有的字段
-        Class<?> clazz = paramList.get(0).getClass();
+        Class<?> clazz = paramList.getFirst().getClass();
         List<Field> fieldList = FieldUtils.getAllFields(clazz);
         Field field = fieldList.stream().filter(x -> x.getName().equals(fieldName)).findFirst().orElse(null);
         Field parentField = fieldList.stream().filter(x -> x.getName().equals(parentFieldName)).findFirst().orElse(null);
@@ -42,28 +39,26 @@ public class NodeUtils {
         }
 
         //所有的节点
-        List<Node<T>> allNodeList = new ArrayList<>(){{
+        List<Node<T>> allNodeList = new ArrayList<>() {{
             for (T t : paramList) {
-                add(new Node(t, new ArrayList<T>()));
+                add(new Node<T>(t, new ArrayList<>()));
             }
         }};
 
         //id与节点的对应关系
-        Map<Object, Node<T>> idAndNodeVOMap = allNodeList
+        Map<Object, Node<T>> idAndNodeVoMap = allNodeList
                 .stream()
                 .filter(x -> FieldUtils.getFieldValue(field, x.getData()) != null)
                 .collect(Collectors.toMap(x -> FieldUtils.getFieldValue(field, x.getData()), x -> x));
 
         //遍历所有节点设置到对应的父节点
-        Iterator<Node<T>> iterator = allNodeList.iterator();
-        while (iterator.hasNext()) {
-            Node<T> node = iterator.next();
+        for (Node<T> node : allNodeList) {
             T data = node.getData();
 
             Object parentId = FieldUtils.getFieldValue(parentField, data);
-            if (parentId != null && idAndNodeVOMap.containsKey(parentId)) {
+            if (parentId != null && idAndNodeVoMap.containsKey(parentId)) {
                 //当前节点是子节点
-                Node<T> parentNode = idAndNodeVOMap.get(parentId);
+                Node<T> parentNode = idAndNodeVoMap.get(parentId);
                 List<Node<T>> children = parentNode.getChildren();
                 children.add(node);
             } else {
